# KinFragLib

./: .gitignore  CITATION.bib  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
custom_kinfraglib_notebooks/: 1_3_custom_filters_synthesizability.ipynb
data/: README.md
data/filters/: README.md
kinfraglib/: __init__.py  utils.py
notebooks/: 0_0_combinatorial_library_exact_vs_most_similar.ipynb  0_0_combinatorial_library_exact_vs_most_similar_av.ipynb  0_1_check_missing_theoretical_matches.ipynb  0_2_check_missing_practical_matches.ipynb  1_1_quick_start.ipynb  2_1_fragment_analysis_original_ligands.ipynb  2_2_fragment_analysis_statistics.ipynb  2_3_fragment_analysis_most_common_fragments.ipynb  2_4_fragment_analysis_literature.ipynb  2_4_highlight_fragments_in_ligand.ipynb  3_1_fragment_library_reduced.ipynb  3_2_fragment_library_reduced_original_ligands.ipynb  4_1_combinatorial_library_data.ipynb  4_1_combinatorial_library_properties.ipynb  4_1_ligand_analysis.ipynb  4_2_combinatorial_library_comparison_klifs.ipynb  4_2_combinatorial_library_properties.ipynb  4_3_combinatorial_library_comparison_chembl.ipynb  4_3_combinatorial_library_comparison_klifs.ipynb  4_4_combinatorial_library_comparison_chembl.ipynb  4_5_combinatorial_library_construct_ligands.ipynb  README.md  cluster_most_common_fragments.ipynb  connectivity_issue.ipynb  fragment_analysis.ipynb  fragment_library.ipynb  fragment_library_reduced.ipynb  incorrect_fragments_in_reduced_lib.ipynb  original_ligands.ipynb  quick_start.ipynb  util.py  utils.py
(+126 files in other folders)
