[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "kinfraglib"
version = "1.0.0"
description = "KinFragLib"
license = { text = "MIT" }
authors = [
    { name = "Volkamer Lab", email = "volkamer@cs.uni-saarland.de" }
]
urls = { "Homepage" = "https://github.com/volkamerlab/KinFragLib" }

classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix"
]

[tool.setuptools.packages]
find = {}

